<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blacksoft"
    tools:context=".Activity.DetailActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_avatar"
        android:layout_width="@dimen/seratuslimapuluhdp"
        android:layout_height="@dimen/seratuslimapuluhdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/duapuluhdp"
        android:scaleType="centerCrop"
        app:civ_border_color="@color/cream"
        app:civ_border_width="@dimen/tigadp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/delapandp"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/view_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar"
        app:layout_constraintVertical_bias="0.014" />

    <TextView
        android:id="@+id/colon1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colon"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toEndOf="@+id/colon1"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/delapandp"
        android:text="@string/name"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/colon2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colon"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/colon1"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="@dimen/seratuslimapuluhdp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/tv_username"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/delapandp"
        android:text="@string/lokasi"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/colon3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colon"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/colon1"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="@dimen/seratuslimapuluhdp"
        android:layout_height="wrap_content"
        android:text="@string/lokasi"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/tv_username"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/tv_company"
        android:layout_width="@dimen/seratuslimapuluhdp"
        android:layout_height="wrap_content"
        android:text="@string/company"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/tv_username"
        app:layout_constraintTop_toTopOf="@+id/textView4" />



    <TextView
        android:id="@+id/colon4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colon"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/colon2"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/delapandp"
        android:text="@string/company"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/tv_location" />

    <View
        android:id="@+id/view_bottom"
        android:layout_width="@dimen/tigaratuslimapuluhdp"
        android:layout_height="@dimen/satudp"
        android:layout_marginTop="@dimen/delapandp"
        android:layout_marginBottom="@dimen/duapuluhdp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tab_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_company" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/delapandp"
        android:background="@color/cream"
        app:layout_constraintBottom_toBottomOf="@+id/view_pager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_bottom"
        app:layout_constraintVertical_bias="0.051"
        app:tabTextColor="@android:color/black" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/tab_layout"
        android:background="@color/cream"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"
        app:layout_constraintVertical_bias="0.927" />

</androidx.constraintlayout.widget.ConstraintLayout>
